chore(deps): update java deps and bazel rules
Change-Id: Ifc4853cdb95ad74591b39093615bd1bca8cf931a