@@ -16,6 +16,7 @@
 
 package com.cgi.eoss.eopp.geojson;
 
+import com.fasterxml.jackson.annotation.JsonAnySetter;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonPropertyOrder;
@@ -31,8 +32,6 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Stream;
 
-import static java.util.stream.Collectors.toList;
-
 /**
  * <p>A Geometry construct comprising two or more {@link Position} objects.</p>
  *
@@ -46,7 +45,7 @@ public class LineString extends Geometry<List<Position>, org.locationtech.jts.ge
     @JsonCreator
     public LineString(
             @JsonProperty("bbox") List<BigDecimal> bbox,
-            @JsonProperty("foreignMembers") Map<String, Object> foreignMembers,
+            @JsonAnySetter @JsonProperty("foreignMembers") Map<String, Object> foreignMembers,
             @JsonProperty("coordinates") List<Position> coordinates) {
         super(GeoJSONType.LineString, bbox, foreignMembers);
 
@@ -74,7 +73,7 @@ public class LineString extends Geometry<List<Position>, org.locationtech.jts.ge
 
     @Override
     public List<Position> computeFlattenedCoordinates() {
-        return flattenCoordinates(coordinates).collect(toList());
+        return flattenCoordinates(coordinates).toList();
     }
 
     @Override
@@ -101,9 +100,9 @@ public class LineString extends Geometry<List<Position>, org.locationtech.jts.ge
     @Override
     public String toString() {
         return "LineString{" +
-                "coordinates=" + coordinates +
-                toStringProperties() +
-                '}';
+               "coordinates=" + coordinates +
+               toStringProperties() +
+               '}';
     }
 
     public LinearRing toLinearRing() {
