@@ -16,6 +16,7 @@
 
 package com.cgi.eoss.eopp.geojson;
 
+import com.fasterxml.jackson.annotation.JsonAnySetter;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonPropertyOrder;
@@ -30,8 +31,6 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Stream;
 
-import static java.util.stream.Collectors.toList;
-
 /**
  * <p>A Geometry construct comprising multiple {@link Polygon} objects.</p>
  *
@@ -45,11 +44,11 @@ public class MultiPolygon extends Geometry<List<List<LinearRing>>, org.locationt
     @JsonCreator
     public MultiPolygon(
             @JsonProperty("bbox") List<BigDecimal> bbox,
-            @JsonProperty("foreignMembers") Map<String, Object> foreignMembers,
+            @JsonAnySetter @JsonProperty("foreignMembers") Map<String, Object> foreignMembers,
             @JsonProperty("coordinates") List<List<LinearRing>> coordinates) {
         super(GeoJSONType.MultiPolygon, bbox, foreignMembers);
 
-        this.coordinates = Optional.ofNullable(coordinates).map(it -> Collections.unmodifiableList(it.stream().map(Collections::unmodifiableList).collect(toList())))
+        this.coordinates = Optional.ofNullable(coordinates).map(it -> Collections.unmodifiableList(it.stream().map(Collections::unmodifiableList).toList()))
                 .orElseThrow(() -> new IllegalArgumentException("MultiPolygon is missing required 'coordinates' property"));
     }
 
@@ -68,7 +67,7 @@ public class MultiPolygon extends Geometry<List<List<LinearRing>>, org.locationt
 
     @Override
     public List<Position> computeFlattenedCoordinates() {
-        return flattenCoordinates(coordinates).collect(toList());
+        return flattenCoordinates(coordinates).toList();
     }
 
     @Override
@@ -95,9 +94,9 @@ public class MultiPolygon extends Geometry<List<List<LinearRing>>, org.locationt
     @Override
     public String toString() {
         return "MultiPolygon{" +
-                "coordinates=" + coordinates +
-                toStringProperties() +
-                '}';
+               "coordinates=" + coordinates +
+               toStringProperties() +
+               '}';
     }
 
     public Builder toBuilder() {
